[package]
name = "irys"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
reth-e2e-test-utils.workspace = true
reth-node-ethereum.workspace = true
reth-tracing.workspace = true
reth-network.workspace = true
reth-chainspec.workspace = true
alloy-primitives.workspace = true
alloy-genesis.workspace = true
alloy-rpc-types.workspace = true
alloy-rpc-types-eth.workspace = true
alloy-eips.workspace = true
alloy-evm.workspace = true
alloy-consensus.workspace = true
alloy-network.workspace = true
reth.workspace = true
reth-evm.workspace = true
reth-evm-ethereum.workspace = true
reth-trie-db.workspace = true
reth-ethereum-engine-primitives.workspace = true
reth-ethereum-primitives.workspace = true
reth-transaction-pool.workspace = true
revm.workspace = true
tokio.workspace = true
eyre.workspace = true
serde.workspace = true
futures.workspace = true
tracing.workspace = true
serde_json.workspace = true

[lints]
# workspace = true
