[package]
name = "reth-irys-evm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# Reth
reth-chainspec.workspace = true
reth-evm = { workspace = true, features = ["op"] }
reth-primitives-traits.workspace = true
reth-execution-errors.workspace = true
reth-execution-types.workspace = true

# ethereum
alloy-eips.workspace = true
alloy-evm.workspace = true
alloy-primitives.workspace = true
alloy-op-evm.workspace = true
op-alloy-consensus.workspace = true
alloy-consensus.workspace = true

# Optimism
reth-irys-consensus.workspace = true
reth-irys-chainspec.workspace = true
reth-irys-forks.workspace = true
reth-irys-primitives.workspace = true

# revm
revm.workspace = true
op-revm.workspace = true

# misc
thiserror.workspace = true

[dev-dependencies]
reth-evm = { workspace = true, features = ["test-utils"] }
reth-revm = { workspace = true, features = ["test-utils"] }
reth-irys-chainspec.workspace = true
alloy-genesis.workspace = true
alloy-consensus.workspace = true
reth-irys-primitives = { workspace = true, features = ["arbitrary"] }

[features]
default = ["std"]
std = [
    "reth-revm/std",
    "alloy-consensus/std",
    "alloy-eips/std",
    "alloy-genesis/std",
    "alloy-primitives/std",
    "reth-primitives-traits/std",
    "revm/std",
    "reth-irys-primitives/std",
    "reth-irys-forks/std",
    "thiserror/std",
    "op-alloy-consensus/std",
    "reth-chainspec/std",
    "reth-irys-consensus/std",
    "reth-irys-chainspec/std",
    "reth-execution-errors/std",
    "reth-execution-types/std",
    "alloy-evm/std",
    "alloy-op-evm/std",
    "op-revm/std",
    "reth-evm/std",
]
portable = ["reth-revm/portable"]
